# skillbox_django

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/database/: db.sqlite3
mysite/mysite/: settings.py
