[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["igor_kozlovtsev <igor.master.1941@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
